--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,12 @@ body {
   height: 100%;
 }
 
+.footernav {
+ position:absolute;
+  bottom:0;
+  left:0;
+}
+
 .navStyle {
   background-color: #092c4c !important;
   color: #ffffff !important;
